[package]
name = "soroban-fork"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
description = "Lazy-loading mainnet/testnet fork for Soroban tests — an Anvil-equivalent for Stellar."
authors = ["Alex Kraiz <selfsurfer@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lobotomoe/soroban-fork"
homepage = "https://github.com/lobotomoe/soroban-fork"
documentation = "https://docs.rs/soroban-fork"
readme = "README.md"
keywords = ["stellar", "soroban", "testing", "fork", "blockchain"]
categories = ["development-tools::testing", "simulation"]

[dependencies]
# Pulls in everything we need from the XDR surface (re-exported as
# `soroban_env_host::xdr`) — avoids keeping a direct `stellar-xdr` dep
# whose version would have to be pinned in lockstep with the host.
soroban-env-host = { version = "25.0.1", features = ["testutils"] }
soroban-sdk = { version = "25.3.0", features = ["testutils"] }
soroban-ledger-snapshot = "25.3.0"
stellar-strkey = "0.0.16"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
thiserror = "2"
log = "0.4"

[dev-dependencies]
# Initialized in tests via `.try_init()` so `RUST_LOG=soroban_fork=debug`
# surfaces fetch traces without every test opting in manually.
env_logger = "0.11"
